@@ -95,9 +95,11 @@ public class CartServiceImp implements CartService{
         List<CartDTO> cartDTOS=carts.stream()
                 .map(cart -> {
                     CartDTO cartDTO=modelMapper.map(cart,CartDTO.class);
-                    List<ProductDTO> products=cart.getCartitems().stream()
-                            .map(p->modelMapper.map(p.getProduct(),ProductDTO.class))
-                            .toList();
+                    List<ProductDTO> products = cart.getCartitems().stream().map(cartItem -> {
+                        ProductDTO productDTO = modelMapper.map(cartItem.getProduct(), ProductDTO.class);
+                        productDTO.setQuantity(cartItem.getQuantity()); // Set the quantity from CartItem
+                        return productDTO;
+                    }).collect(Collectors.toList());
                     cartDTO.setProducts(products);
                     return cartDTO;
                 }).collect(Collectors.toList());
